# quant-sys

./: .gitignore  PROJECT_TRACKER.md  README.md  fix_indicators.py  project_tree.sh  pyproject.toml
config/: settings.yaml  universe_sp500.csv
docs/session_templates/: chat_context_template.md  copy_paste_template.md  quick_start_reference.md  session-management-system-summary.md  template_usage_guide.md
src/quant_sys/: cli.py
src/quant_sys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quant_sys/analysis/: regime_detector.py  technical_analyst.py
src/quant_sys/core/: calendar.py  config.py  costs.py  storage.py
src/quant_sys/data/: ingest.py  transform.py
src/quant_sys/features/: __init__.py  high_quality_momentum.py  technical.py  vol_models.py
src/quant_sys/signals/: __init__.py  mean_reversion_signals.py  momentum_signals.py  signal_combiner.py
src/quant_sys/strategies/: __init__.py  hybrid_strategy.py  momentum_strategy.py
tests/: test_features.py  test_regime_detection.py
